--- a/style.css
+++ b/style.css
@@ -65,6 +65,14 @@ header {
   color: #ecdbc9;
 }
 
+header nav {
+  display: flex;
+  justify-content: center;
+}
+
+header nav ul {
+  display: flex
+}
 header nav ul li {
   list-style-type: none;
 }
@@ -118,3 +126,24 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (min-width: 600px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+  }
+
+header h1 {
+    margin: 14px 0;
+    padding-top: 0;
+  }
+  
+header nav {
+      margin-top: 8px;
+  }
+
+
+header nav ul li a:hover {
+  color: #bdbdbd;
+    }
+}
