--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ section.alternate-background {
 }
 
 main img {
-  width: 100px;
+  width: 100%;
 }
+
 
 /* ---  Groups & Items --- */
 
@@ -71,8 +72,9 @@ header nav {
 }
 
 header nav ul {
-  display: flex
+  display: flex;
 }
+
 header nav ul li {
   list-style-type: none;
 }
@@ -88,10 +90,13 @@ header nav ul li a:hover {
   text-decoration: none;
 }
 
+
 /* -------  Join Form ------- */
 form {
   border: 2px solid #6b1a22;
+  display: flex;
   padding: 10px;
+  flex-flow: column nowrap
 }
 
 form label {
