--- a/style.css
+++ b/style.css
@@ -50,9 +50,11 @@ main img {
 
 .item-double {
   flex: 2;
+  margin: 10px;
 }
 
 /* -------  Navigation ------- */
+
 
 header {
   background-color: #83092e;
@@ -90,17 +92,20 @@ header nav ul li a:hover {
   text-decoration: none;
 }
 
-
 /* -------  Join Form ------- */
 form {
   border: 2px solid #6b1a22;
-  display: flex;
+  flex-wrap: column nowrap;
   padding: 10px;
-  flex-flow: column nowrap
 }
 
 form label {
   font-weight: bold;
+}
+
+form div {
+  display: flex;
+  justify-content: space-between;
 }
 
 form select,
@@ -131,24 +136,28 @@ footer p {
 }
 
 /* -------  Media Query ------- */
-@media all and (min-width: 600px) {
+@media all and (min-width: 480px) {
   header {
     display: flex;
     justify-content: space-between;
     padding: 0 30px;
   }
-
-header h1 {
+  
+  header h1 {
     margin: 14px 0;
     padding-top: 0;
   }
   
-header nav {
+  header nav {
       margin-top: 8px;
   }
 
-
-header nav ul li a:hover {
+  header nav ul li a:hover {
   color: #bdbdbd;
-    }
+  }
+
+  .group {
+    flex-direction: row;
+    align-items: center;
+  }
 }
